# GalMaster

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  config.example.toml  pyproject.toml  requirements.txt  start.bat
.github/workflows/: release.yml
app/: __init__.py  app_controller.py  config.py  main.py  pipeline.py  pipeline_queue.py
app/capture/: __init__.py  dpi.py  monitor.py  screenshot.py  wgc.py  windows.py
app/hotkeys/: __init__.py  global_hotkey.py
app/i18n/: __init__.py  en.json  zh-Hant.json
app/obs/: __init__.py  server.py
app/ocr/: __init__.py  base.py  hybrid_ocr_engine.py  manga_ocr_engine.py  oneocr_engine.py  paddle_ocr_engine.py  preprocess.py  rapid_ocr_engine.py  text_clean.py  windows_ai_ocr.py  windows_ocr_engine.py  windows_smart_ocr.py
app/session/: __init__.py  capture_stage.py
app/translate/: __init__.py  base.py  cache.py  llm_translator.py  providers.py
app/ui/: __init__.py  main_window.py  overlay_window.py  region_selector.py  styles.py  widgets.py
assets/: obs_overlay.html
assets/prompts/: extract.txt  translate.txt  vision_e2e.txt
crates/galmaster/: Cargo.toml  build.rs
crates/galmaster-capture/: Cargo.toml
crates/galmaster-capture/src/: lib.rs
crates/galmaster-core/: Cargo.toml
crates/galmaster-core/src/: config.rs  gate.rs  lib.rs  pipeline.rs  style.rs  types.rs
crates/galmaster-extract/: Cargo.toml
crates/galmaster-extract/src/: lib.rs  vision.rs
crates/galmaster-obs/: Cargo.toml
crates/galmaster-obs/src/: lib.rs
crates/galmaster-provider/: Cargo.toml
crates/galmaster-provider/src/: anthropic.rs  lib.rs  openai.rs
crates/galmaster-translate/: Cargo.toml
crates/galmaster-translate/src/: lib.rs
crates/galmaster-ui/: Cargo.toml
crates/galmaster-ui/src/: app.rs  lib.rs  llm_settings.rs  style_editor.rs  system_fonts.rs
crates/galmaster-understand/: Cargo.toml
crates/galmaster-understand/src/: lib.rs
crates/galmaster/src/: main.rs  worker.rs
crates/galmaster/tests/: smoke.rs
crates/galmaster/windows/: app.manifest
docs/: architecture.md  linux-plasma-smoke.md  state-machine.md  windows.md
scripts/: build.sh  build_windows_msvc.sh  find_oneocr.py  find_wasdk.ps1  probe_oneocr.py  probe_winai_ocr.py  probe_windows_ai_ocr.ps1  run_plasma_wayland_smoke.sh  smoke_headless.py  smoke_integration.py
tests/: conftest.py  test_cache.py  test_capture_stage.py  test_config.py  test_diff.py  test_dpi_scale.py  test_hotkey_parse.py  test_i18n.py  test_llm_protocol.py  test_monitor_thread.py  test_obs_server.py  test_ocr_smoke.py  test_oneocr.py  test_overlay_font_size.py  test_pipeline_buffer.py  test_pipeline_cancel.py  test_result_history.py  test_styles_indicators.py  test_window_capture.py  test_windows_ocr.py
tools/wasdk_ocr/: README.md  WinAiOcr.ps1
