[project]
name = "galmaster"
version = "0.1.0"
description = "Window capture OCR + LLM translation for visual novels / galgames"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.6.0",
    "openai>=1.40.0",
    "Pillow>=10.0.0",
    "numpy>=1.26.0",
    "mss>=9.0.0",
    "pywin32>=306; sys_platform == 'win32'",
    "rapidocr-onnxruntime>=1.3.24",
    "python-dotenv>=1.0.0",
    "opencv-python-headless>=4.8.0,<5",
    "manga-ocr>=0.1.12",
    # Windows Graphics Capture (OBS-style window capture); optional at runtime if missing
    "windows-capture>=1.4.0 ; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
manga = [
    "manga-ocr>=0.1.12",
]
# Full PaddleOCR runtime (heavy; needs working paddlepaddle DLLs on Windows)
paddle-native = [
    "paddleocr>=2.7.0",
    "paddlepaddle>=3.0.0",
]

[project.scripts]
galmaster = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
package = true
