[project]
name = "galmaster"
version = "0.1.0"
description = "Window capture OCR + LLM translation for visual novels / galgames"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.6.0",
    "openai>=1.40.0",
    "Pillow>=10.0.0",
    "numpy>=1.26.0",
    "mss>=9.0.0",
    "pywin32>=306; sys_platform == 'win32'",
    "rapidocr-onnxruntime>=1.3.24",
    "python-dotenv>=1.0.0",
    "opencv-python-headless>=4.8.0,<5",
    "manga-ocr>=0.1.12",
    # Windows Graphics Capture (OBS-style window capture); optional at runtime if missing
    "windows-capture>=1.4.0 ; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]
manga = [
    "manga-ocr>=0.1.12",
]
# Full PaddleOCR runtime (heavy; needs working paddlepaddle DLLs on Windows)
paddle-native = [
    "paddleocr>=2.7.0",
    "paddlepaddle>=3.0.0",
]

[project.scripts]
galmaster = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["app", "tests", "scripts"]
extend-exclude = [
    ".venv",
    "models",
    "tools",
    "debug_ocr",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line length owned by the formatter
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.uv]
package = true
