[package]
name = "galmaster-capture"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Window/ROI screen capture for GalMaster"

[dependencies]
galmaster-core.workspace = true
anyhow.workspace = true
image.workspace = true
tracing.workspace = true
xcap.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }
