[package]
name = "galmaster-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, gates, config, and pipeline orchestration for GalMaster"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
image.workspace = true
serde.workspace = true
serde_json.workspace = true
strsim.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
