[package]
name = "galmaster-obs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OBS Browser Source HTTP + WebSocket server"

[dependencies]
galmaster-core.workspace = true
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
futures.workspace = true
