[package]
name = "galmaster-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpenAI / Anthropic compatible HTTP clients (text + vision)"

[dependencies]
anyhow.workspace = true
base64.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
