[package]
name = "galmaster-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "egui settings window and subtitle overlay for GalMaster"

[dependencies]
galmaster-core.workspace = true
galmaster-capture.workspace = true
galmaster-provider = { path = "../galmaster-provider" }
anyhow.workspace = true
eframe.workspace = true
egui.workspace = true
image.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
