[package]
name = "galmaster"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GalMaster — real-time window subtitle capture and translation"
default-run = "galmaster"

[[bin]]
name = "galmaster"
path = "src/main.rs"

[build-dependencies]
winresource = "0.1"

[dependencies]
galmaster-core.workspace = true
galmaster-capture.workspace = true
galmaster-provider = { path = "../galmaster-provider" }
galmaster-extract = { path = "../galmaster-extract" }
galmaster-understand = { path = "../galmaster-understand" }
galmaster-translate = { path = "../galmaster-translate" }
galmaster-obs = { path = "../galmaster-obs" }
galmaster-ui = { path = "../galmaster-ui" }
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
reqwest.workspace = true

[dev-dependencies]
galmaster-core.workspace = true
galmaster-capture.workspace = true
galmaster-obs = { path = "../galmaster-obs" }
image.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "net"] }
toml.workspace = true
